# profundc

./: .gitignore  MANIFEST.in  README.md  pfdc.sh  pyproject.toml  requirements.txt
src/profundc/core/: logs.py  monitor.py  paths.py
src/profundc/interfaces/: cli.py
src/profundc/resources/: tcpkill_packet.sh
src/profundc/services/: disconnect.py  game.py  kill.py
