[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "profundc"
version = "0.1.0"
description = "A quick-disconnect CLI tool for Hearthstone on Linux"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "fishspit", email = "fishspitty@gmail.com" }
]
keywords = ["hearthstone", "cli", "disconnect", "automation"]
requires-python = ">=3.7"
dependencies = [
  "psutil>=5.9.0",
  "configobj>=5.0.6"
]

[project.urls]
"Homepage" = "https://github.com/fishspit/profundc"
"Issue Tracker" = "https://github.com/fishspit/profundc/issues"

[project.scripts]
pfdc = "profundc.interfaces.cli:main"
profundc = "profundc.interfaces.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"profundc.resources" = ["tcpkill_packet.sh"]

